deploy: 7a56723d9c2ea4e2caa388d59107b0ec7a754cc5

--- a/print.html
+++ b/print.html
@@ -2910,10 +2910,10 @@ func print_result(dur time.Duration, part, result int) {
 }
 
 const (
-  Space = 0
-  Wall = 1
-  Box = 2
-  LeftBox = 3
+  Space    = 0
+  Wall     = 1
+  Box      = 2
+  LeftBox  = 3
   RightBox = 4
 )
 
@@ -2933,29 +2933,29 @@ func read_file(file_path string) ([][]int8, [2]int, [][2]int) {
       row := make([]int8, len(line))
       for j, char := range strings.Split(line, "") {
         switch char {
-          case "#":
-            row[j] = Wall
-          case "O":
-            row[j] = Box
-          case "@":
-            row[j] = Space
-            position = [2]int{i,j}
-          case ".":
-            row[j] = Space
+        case "#":
+          row[j] = Wall
+        case "O":
+          row[j] = Box
+        case "@":
+          row[j] = Space
+          position = [2]int{i, j}
+        case ".":
+          row[j] = Space
         }
       }
       m = append(m, row)
     } else {
       for _, char := range strings.Split(line, "") {
         switch char {
-          case "&gt;":
-            moves = append(moves, [2]int{0,1})
-          case "&lt;":
-            moves = append(moves, [2]int{0,-1})
-          case "^":
-            moves = append(moves, [2]int{-1,0})
-          case "v":
-            moves = append(moves, [2]int{1,0})
+        case "&gt;":
+          moves = append(moves, [2]int{0, 1})
+        case "&lt;":
+          moves = append(moves, [2]int{0, -1})
+        case "^":
+          moves = append(moves, [2]int{-1, 0})
+        case "v":
+          moves = append(moves, [2]int{1, 0})
         }
       }
     }
@@ -2963,18 +2963,18 @@ func read_file(file_path string) ([][]int8, [2]int, [][2]int) {
   return m, position, moves
 }
 
-func wider_map(m [][]int8) [][]int8{
+func wider_map(m [][]int8) [][]int8 {
   wider := make([][]int8, len(m))
   for i, row := range m {
     var new_row []int8
     for j := range row {
       switch row[j] {
-        case Space:
-          new_row = append(new_row, Space, Space)
-        case Wall:
-          new_row = append(new_row, Wall, Wall)
-        case Box:
-          new_row = append(new_row, LeftBox, RightBox)
+      case Space:
+        new_row = append(new_row, Space, Space)
+      case Wall:
+        new_row = append(new_row, Wall, Wall)
+      case Box:
+        new_row = append(new_row, LeftBox, RightBox)
       }
     }
     wider[i] = new_row
@@ -2984,37 +2984,37 @@ func wider_map(m [][]int8) [][]int8{
 
 func up_down_move(m *[][]int8, box [2]int, move [2]int) {
   if (*m)[box[0]][box[1]] == LeftBox {
-    if (*m)[box[0] + move[0]][box[1]] == LeftBox || (*m)[box[0] + move[0]][box[1]] == RightBox{
+    if (*m)[box[0]+move[0]][box[1]] == LeftBox || (*m)[box[0]+move[0]][box[1]] == RightBox {
       up_down_move(m, [2]int{box[0] + move[0], box[1]}, move)
     }
-    if (*m)[box[0] + move[0]][box[1] + 1] == LeftBox {
+    if (*m)[box[0]+move[0]][box[1]+1] == LeftBox {
       up_down_move(m, [2]int{box[0] + move[0], box[1] + 1}, move)
     }
     (*m)[box[0]][box[1]] = Space
-    (*m)[box[0]][box[1] + 1] = Space
-    (*m)[box[0] + move[0]][box[1]] = LeftBox
-    (*m)[box[0] + move[0]][box[1] + 1] = RightBox
+    (*m)[box[0]][box[1]+1] = Space
+    (*m)[box[0]+move[0]][box[1]] = LeftBox
+    (*m)[box[0]+move[0]][box[1]+1] = RightBox
   } else if (*m)[box[0]][box[1]] == RightBox {
     up_down_move(m, [2]int{box[0], box[1] - 1}, move)
   }
 }
 
 func up_down_check(m *[][]int8, box [2]int, move [2]int) bool {
-  if box[0] + move[0] &lt; 0 || box[0] + move[0] &gt;= len(*m) {
+  if box[0]+move[0] &lt; 0 || box[0]+move[0] &gt;= len(*m) {
     return false
   }
   plausible := true
   if (*m)[box[0]][box[1]] == LeftBox {
-    if (*m)[box[0] + move[0]][box[1]] == LeftBox || (*m)[box[0] + move[0]][box[1]] == RightBox {
+    if (*m)[box[0]+move[0]][box[1]] == LeftBox || (*m)[box[0]+move[0]][box[1]] == RightBox {
       plausible = plausible &amp;&amp; up_down_check(m, [2]int{box[0] + move[0], box[1]}, move)
     }
-    if (*m)[box[0] + move[0]][box[1] + 1] == LeftBox {
+    if (*m)[box[0]+move[0]][box[1]+1] == LeftBox {
       plausible = plausible &amp;&amp; up_down_check(m, [2]int{box[0] + move[0], box[1] + 1}, move)
     }
-    if (*m)[box[0] + move[0]][box[1]] == Space &amp;&amp; (*m)[box[0] + move[0]][box[1] + 1] == Space {
+    if (*m)[box[0]+move[0]][box[1]] == Space &amp;&amp; (*m)[box[0]+move[0]][box[1]+1] == Space {
       plausible = plausible &amp;&amp; true
     }
-    if (*m)[box[0] + move[0]][box[1]] == Wall || (*m)[box[0] + move[0]][box[1] + 1] == Wall {
+    if (*m)[box[0]+move[0]][box[1]] == Wall || (*m)[box[0]+move[0]][box[1]+1] == Wall {
       plausible = false
     }
   } else if (*m)[box[0]][box[1]] == RightBox {
@@ -3026,16 +3026,16 @@ func up_down_check(m *[][]int8, box [2]int, move [2]int) bool {
 func move_larger_box(m *[][]int8, box [2]int, move [2]int) bool {
   if move[0] == 0 {
     i := 0
-    for ;box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; ((*m)[box[0]][box[1] + i * move[1]] == LeftBox || (*m)[box[0]][box[1] + i * move[1]] == RightBox); i += 1 {
+    for ; box[1]+i*move[1] &lt; len((*m)[box[0]]) &amp;&amp; ((*m)[box[0]][box[1]+i*move[1]] == LeftBox || (*m)[box[0]][box[1]+i*move[1]] == RightBox); i += 1 {
     }
-    if box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0]][box[1] + i * move[1]] == Space {
+    if box[1]+i*move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0]][box[1]+i*move[1]] == Space {
       (*m)[box[0]][box[1]] = Space
-      (*m)[box[0]][box[1] + i* move[1]] = (*m)[box[0]][box[1] + (i - 1) * move[1]]
+      (*m)[box[0]][box[1]+i*move[1]] = (*m)[box[0]][box[1]+(i-1)*move[1]]
       for j := 1; j &lt; i; j++ {
-        if (*m)[box[0]][box[1] + j * move[1]] == RightBox {
-          (*m)[box[0]][box[1] + j * move[1]] = LeftBox
+        if (*m)[box[0]][box[1]+j*move[1]] == RightBox {
+          (*m)[box[0]][box[1]+j*move[1]] = LeftBox
         } else {
-          (*m)[box[0]][box[1] + j * move[1]] = RightBox
+          (*m)[box[0]][box[1]+j*move[1]] = RightBox
         }
       }
       return true
@@ -3051,11 +3051,11 @@ func move_larger_box(m *[][]int8, box [2]int, move [2]int) bool {
 
 func move_box(m *[][]int8, box [2]int, move [2]int) bool {
   i := 0
-  for ; box[0] + i * move[0] &lt; len(*m) &amp;&amp; box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0] + i * move[0]][box[1] + i * move[1]] == Box; i++ {
+  for ; box[0]+i*move[0] &lt; len(*m) &amp;&amp; box[1]+i*move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0]+i*move[0]][box[1]+i*move[1]] == Box; i++ {
   }
-  if box[0] + i * move[0] &lt; len(*m) &amp;&amp; box[1] + i * move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0] + i * move[0]][box[1] + i * move[1]] == Space {
+  if box[0]+i*move[0] &lt; len(*m) &amp;&amp; box[1]+i*move[1] &lt; len((*m)[box[0]]) &amp;&amp; (*m)[box[0]+i*move[0]][box[1]+i*move[1]] == Space {
     (*m)[box[0]][box[1]] = Space
-    (*m)[box[0] + i * move[0]][box[1] + i * move[1]] = Box
+    (*m)[box[0]+i*move[0]][box[1]+i*move[1]] = Box
     return true
   }
   return false
@@ -3067,20 +3067,20 @@ func single_step(m *[][]int8, position *[2]int, move [2]int) {
     (*position)[1] + move[1],
   }
   switch (*m)[new_position[0]][new_position[1]] {
-    case Space:
+  case Space:
+    *position = new_position
+  case Wall:
+    return
+  case Box:
+    if move_box(m, new_position, move) {
       *position = new_position
-    case Wall:
-      return
-    case Box:
-      if move_box(m, new_position, move) {
-        *position = new_position
-      }
-    case LeftBox:
-      fallthrough
-    case RightBox:
-      if move_larger_box(m, new_position, move) {
-        *position = new_position
-      }
+    }
+  case LeftBox:
+    fallthrough
+  case RightBox:
+    if move_larger_box(m, new_position, move) {
+      *position = new_position
+    }
   }
 }
 
@@ -3089,7 +3089,7 @@ func simulate(m *[][]int8, position *[2]int, moves [][2]int) int {
     single_step(m, position, move)
   }
   sum := 0
-  for i, row := range (*m) {
+  for i, row := range *m {
     for j := range row {
       if row[j] == Box || row[j] == LeftBox {
         sum += i*100 + j
@@ -3155,9 +3155,9 @@ func print_result(dur time.Duration, part, result int) {
 }
 
 const (
-  Wall = 1
+  Wall  = 1
   Space = 0
-  Max = int(^uint(0) &gt;&gt; 1)
+  Max   = int(^uint(0) &gt;&gt; 1)
 )
 
 func read_file(file_path string) ([][]int8, [2]int, [2]int) {
@@ -3175,16 +3175,16 @@ func read_file(file_path string) ([][]int8, [2]int, [2]int) {
     row := make([]int8, len(line))
     for j, c := range line {
       switch c {
-        case '#':
-          row[j] = Wall
-        case '.':
-          row[j] = Space
-        case 'S':
-          start = [2]int{i, j}
-          row[j] = Space
-        case 'E':
-          end = [2]int{i, j}
-          row[j] = Space
+      case '#':
+        row[j] = Wall
+      case '.':
+        row[j] = Space
+      case 'S':
+        start = [2]int{i, j}
+        row[j] = Space
+      case 'E':
+        end = [2]int{i, j}
+        row[j] = Space
       }
     }
     maze = append(maze, row)
@@ -3211,15 +3211,15 @@ func find_path(maze [][]int8, current, end, orientation [2]int, visited map[[2]i
   visited[[2]int{current[0], current[1]}] = score
 
   new_pos := [2]int{current[0] + orientation[0], current[1] + orientation[1]}
-  res = extend_path(maze, new_pos, end, orientation, visited, score + 1, res)
+  res = extend_path(maze, new_pos, end, orientation, visited, score+1, res)
 
   new_orientation := [2]int{-orientation[1], orientation[0]}
   new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
-  res = extend_path(maze, new_pos, end, new_orientation, visited, score + 1001, res)
+  res = extend_path(maze, new_pos, end, new_orientation, visited, score+1001, res)
 
   new_orientation = [2]int{orientation[1], -orientation[0]}
   new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
-  res = extend_path(maze, new_pos, end, new_orientation, visited, score + 1001, res)
+  res = extend_path(maze, new_pos, end, new_orientation, visited, score+1001, res)
 
   return res
 }
@@ -3250,15 +3250,15 @@ func find_seats(maze [][]int8, current, end, orientation [2]int, visited map[[4]
   visited[[4]int{current[0], current[1], orientation[0], orientation[1]}] = score
 
   new_pos := [2]int{current[0] + orientation[0], current[1] + orientation[1]}
-  res, seats = extend_seats(maze, new_pos, end, orientation, visited, score + 1, res, budget, seats)
+  res, seats = extend_seats(maze, new_pos, end, orientation, visited, score+1, res, budget, seats)
 
   new_orientation := [2]int{-orientation[1], orientation[0]}
   new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
-  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score + 1001, res, budget, seats)
+  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score+1001, res, budget, seats)
 
   new_orientation = [2]int{orientation[1], -orientation[0]}
   new_pos = [2]int{current[0] + new_orientation[0], current[1] + new_orientation[1]}
-  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score + 1001, res, budget, seats)
+  res, seats = extend_seats(maze, new_pos, end, new_orientation, visited, score+1001, res, budget, seats)
 
   return res, append(seats, current)
 }
@@ -3267,7 +3267,7 @@ func part_one() {
   var result int
   start := time.Now()
   maze, start_point, end_point := read_file("INPUT")
-  result = find_path(maze, start_point, end_point, [2]int{0,1}, make(map[[2]int]int), 0)
+  result = find_path(maze, start_point, end_point, [2]int{0, 1}, make(map[[2]int]int), 0)
   end := time.Now()
   print_result(end.Sub(start), 1, result)
 }
@@ -3276,8 +3276,8 @@ func part_two() {
   var result int
   start := time.Now()
   maze, start_point, end_point := read_file("INPUT")
-  length := find_path(maze, start_point, end_point, [2]int{0,1}, make(map[[2]int]int), 0)
-  _, spots := find_seats(maze, start_point, end_point, [2]int{0,1}, make(map[[4]int]int), 0, length)
+  length := find_path(maze, start_point, end_point, [2]int{0, 1}, make(map[[2]int]int), 0)
+  _, spots := find_seats(maze, start_point, end_point, [2]int{0, 1}, make(map[[4]int]int), 0, length)
   seats := make(map[[2]int]bool)
   for _, s := range spots {
     seats[s] = true
