--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -177,6 +177,7 @@
 <li><a href="2024-14.html">Day 14</a></li>
 <li><a href="2024-15.html">Day 15</a></li>
 <li><a href="2024-16.html">Day 16</a></li>
+<li><a href="2024-17.html">Day 17</a></li>
 </ul>
 
                     </main>
