--- a/print.html
+++ b/print.html
@@ -3367,7 +3367,7 @@ func combo(computer *Computer, val int) int {
   if val == 6 {
     return (*computer).c
   }
-  panic("WHOA")
+  panic("no such possible operand")
 }
 
 func do_operation(computer *Computer, pointer int) (int, bool) {
@@ -3415,6 +3415,9 @@ func find_divisor(computer Computer) int {
   divisor := 1
   for i := 0; i &lt; len(computer.program); i += 2 {
     if computer.program[i] == 0 {
+      if computer.program[i+1] &gt; 3 {
+        panic("no good solution")
+      }
       divisor *= int(math.Pow(2, float64(combo(&amp;computer, computer.program[i+1]))))
     }
   }
@@ -3424,7 +3427,7 @@ func find_divisor(computer Computer) int {
 func solve(computer Computer, prev, index, divisor int) (int, bool) {
   j := index
   for i := 0; i &lt; divisor; i++ {
-    computer.a = prev*8 + i
+    computer.a = prev*divisor + i
     computer.output = make([]int, 0)
     simulate(&amp;computer)
     if j &gt;= len(computer.output) {
@@ -3432,9 +3435,9 @@ func solve(computer Computer, prev, index, divisor int) (int, bool) {
     }
     if computer.output[len(computer.output)-j-1] == computer.program[len(computer.program)-j-1] {
       if j == len(computer.program)-1 {
-        return prev*8 + i, true
+        return prev*divisor + i, true
       }
-      sol, ok := solve(computer, prev*8+i, index+1, divisor)
+      sol, ok := solve(computer, prev*divisor+i, index+1, divisor)
       if ok {
         return sol, ok
       }
