--- a/aoc/2024-18.html
+++ b/aoc/2024-18.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 18 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,42 +154,151 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-18"><a class="header" href="#advent-of-code---year-2024-day-18">Advent of code - Year 2024 Day 18</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/18">day 18</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming language</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readability of the code.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-<li><a href="2024-9.html">Day 9</a></li>
-<li><a href="2024-10.html">Day 10</a></li>
-<li><a href="2024-11.html">Day 11</a></li>
-<li><a href="2024-12.html">Day 12</a></li>
-<li><a href="2024-13.html">Day 13</a></li>
-<li><a href="2024-14.html">Day 14</a></li>
-<li><a href="2024-15.html">Day 15</a></li>
-<li><a href="2024-16.html">Day 16</a></li>
-<li><a href="2024-17.html">Day 17</a></li>
-<li><a href="2024-18.html">Day 18</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>For the first part we may employ any graph search algorithm. In this solution I created simple recursive DFS algorithm. For such we will note the length of shortest path and the predecessor. In this part we do not need predecessors. After that we check what is the length in the end.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>In the second part we always recreate the path from predecessors and check if the byte will drop onto the path or not. If not we can just put it there and not check the path, if it will drop onto the map we need to recompute the shortest path.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "strconv"
+  "time"
+)
+
+const (
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
+)
+
+func print_result(dur time.Duration, part int, result string) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
+const (
+  Size = 71
+  Rep  = 1024
+)
+
+var Start = [2]int{0, 0}
+var End = [2]int{Size - 1, Size - 1}
+
+func read_file(file_path string) [][2]int {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  var numbers [][2]int
+  regex := regexp.MustCompile("([0-9]+),([0-9]+)")
+  for _, f := range regex.FindAllStringSubmatch(string(content), -1) {
+    nr1, _ := strconv.Atoi(f[1])
+    nr2, _ := strconv.Atoi(f[2])
+    numbers = append(numbers, [2]int{nr1, nr2})
+  }
+  return numbers
+}
+
+func find_path(m [Size][Size]bool, current, previous, end [2]int, visited map[[2]int][3]int, length int) {
+  if current[0] &lt; 0 || current[1] &lt; 0 || current[0] &gt;= Size || current[1] &gt;= Size || m[current[0]][current[1]] {
+    return
+  }
+  prev, ok := visited[current]
+  l := prev[0]
+  if !ok || l &gt; length {
+    visited[current] = [3]int{length, previous[0], previous[1]}
+    if current[0] == end[0] &amp;&amp; current[1] == end[1] {
+      return
+    }
+    find_path(m, [2]int{current[0] + 1, current[1]}, current, end, visited, length+1)
+    find_path(m, [2]int{current[0] - 1, current[1]}, current, end, visited, length+1)
+    find_path(m, [2]int{current[0], current[1] + 1}, current, end, visited, length+1)
+    find_path(m, [2]int{current[0], current[1] - 1}, current, end, visited, length+1)
+  }
+}
+
+func recreate_path(visited map[[2]int][3]int) map[[2]int]bool {
+  m := make(map[[2]int]bool)
+  m[End] = true
+  for current := End; current != Start; {
+    prev, _ := visited[current]
+    current = [2]int{prev[1], prev[2]}
+    m[current] = true
+  }
+  return m
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  bytes := read_file("INPUT")
+  var m [Size][Size]bool
+  for i := 0; i &lt; Rep; i++ {
+    m[bytes[i][1]][bytes[i][0]] = true
+  }
+  visited := make(map[[2]int][3]int)
+  find_path(m, Start, Start, End, visited, 0)
+  res, _ := visited[End]
+  result = res[0]
+  end := time.Now()
+  print_result(end.Sub(start), 1, fmt.Sprint(result))
+}
+
+func part_two() {
+  var result [2]int
+  start := time.Now()
+  bytes := read_file("INPUT")
+  var m [Size][Size]bool
+  for i := 0; i &lt; Rep; i++ {
+    m[bytes[i][1]][bytes[i][0]] = true
+  }
+  t := Rep - 1
+  for {
+    visited := make(map[[2]int][3]int)
+    find_path(m, [2]int{0, 0}, [2]int{0, 0}, [2]int{Size - 1, Size - 1}, visited, 0)
+    _, ok := visited[[2]int{Size - 1, Size - 1}]
+    if !ok {
+      result = bytes[t]
+      break
+    }
+    path := recreate_path(visited)
+    for {
+      t++
+      m[bytes[t][1]][bytes[t][0]] = true
+      _, on_path := path[[2]int{bytes[t][1], bytes[t][0]}]
+      if on_path {
+        break
+      }
+    }
+  }
+  end := time.Now()
+  print_result(end.Sub(start), 2, fmt.Sprintf("%d,%d", result[0], result[1]))
+}
+
+func main() {
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "18 - Claw Contraption" + Reset)
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-17.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -199,11 +308,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-17.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
