--- a/aoc/2024-19.html
+++ b/aoc/2024-19.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 19 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,43 +154,137 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-19"><a class="header" href="#advent-of-code---year-2024-day-19">Advent of code - Year 2024 Day 19</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/19">day 19</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming language</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readability of the code.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-<li><a href="2024-9.html">Day 9</a></li>
-<li><a href="2024-10.html">Day 10</a></li>
-<li><a href="2024-11.html">Day 11</a></li>
-<li><a href="2024-12.html">Day 12</a></li>
-<li><a href="2024-13.html">Day 13</a></li>
-<li><a href="2024-14.html">Day 14</a></li>
-<li><a href="2024-15.html">Day 15</a></li>
-<li><a href="2024-16.html">Day 16</a></li>
-<li><a href="2024-17.html">Day 17</a></li>
-<li><a href="2024-18.html">Day 18</a></li>
-<li><a href="2024-19.html">Day 19</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>For the first part we try a prefix if there is a matching pattern, if so recourse on the suffix. If not return false. If we finally found some, terminate the process.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>The second part is done pretty much the same way, except for counting the number of plausible. Since it would be slow we create a cache for already computed sequences.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "strings"
+  "time"
+)
+
+const (
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
+)
+
+func print_result(dur time.Duration, part, result int) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
+}
+
+func read_file(file_path string) ([]string, []string) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  lines := strings.Split(string(content), "\n")
+  patterns := strings.Split(lines[0], ", ")
+  var towels []string
+  for _, line := range lines[1:] {
+    if len(line) == 0 {
+      continue
+    }
+    towels = append(towels, line)
+  }
+  return patterns, towels
+}
+
+func is_plausible(patterns []string, towel string) bool {
+  if len(towel) == 0 {
+    return true
+  }
+  plausible := false
+  for _, pattern := range patterns {
+    length := len(pattern)
+    if len(towel) &lt; length {
+      continue
+    }
+    if towel[:length] == pattern {
+      plausible = plausible || is_plausible(patterns, towel[length:])
+    }
+    if plausible {
+      return plausible
+    }
+  }
+  return plausible
+}
+
+func nr_of_plausible(patterns []string, towel string, cache *map[string]int) int {
+  if len(towel) == 0 {
+    return 1
+  }
+  counter := 0
+  for _, pattern := range patterns {
+    length := len(pattern)
+    if len(towel) &lt; length {
+      continue
+    }
+    if towel[:length] == pattern {
+      precomputed, ok := (*cache)[towel[length:]]
+      if ok {
+        counter += precomputed
+      } else {
+        computed := nr_of_plausible(patterns, towel[length:], cache)
+        (*cache)[towel[length:]] = computed
+        counter += computed
+      }
+    }
+  }
+  return counter
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  patterns, rest := read_file("INPUT")
+  for _, tow := range rest {
+    if is_plausible(patterns, tow) {
+      result += 1
+    }
+  }
+  end := time.Now()
+  print_result(end.Sub(start), 1, result)
+}
+
+func part_two() {
+  var result int
+  start := time.Now()
+  patterns, towels := read_file("INPUT")
+  cache := make(map[string]int)
+  for _, towel := range towels {
+    result += nr_of_plausible(patterns, towel, &amp;cache)
+  }
+  end := time.Now()
+  print_result(end.Sub(start), 2, result)
+}
+
+func main() {
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "19 - Claw Contraption" + Reset)
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-18.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -200,11 +294,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-18.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
