deploy: bf082e0231ed1d139a32ad3afd0d8e802e2fdeec

--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -180,6 +180,7 @@
 <li><a href="2024-17.html">Day 17</a></li>
 <li><a href="2024-18.html">Day 18</a></li>
 <li><a href="2024-19.html">Day 19</a></li>
+<li><a href="2024-20.html">Day 20</a></li>
 </ul>
 
                     </main>
